fixed spacing issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-/* .container{
+.container{
   height: 80vh;
   position:relative
 }
@@ -18,4 +18,4 @@
   flex-direction:column;
   align-items:center;
   display:block;
-} */
+}
